--- a/style.css
+++ b/style.css
@@ -43,9 +43,42 @@ ul {
 bt {
   display: grid;
   width: 200px;
-  grid-auto-flow: row;
+
   margin-left: 50%;
   margin-top: 2%;
+  color: blue;
+  background-color: #4CAF50; /* Green */
+    border: none;
+
+    text-align: center;
+    text-decoration: none;
+
+    font-size: 16px;
+}
+
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 5px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-family: Avenir, Heveltica, Arial, san-serif;
+  font-weight: bold;
+  font-size: 2.5rem;
+  text-align: center;
+  margin-left: 45%;
+  margin-top: 5%;
+  border-radius: 6px;
+}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 
 formdec {
@@ -63,7 +96,7 @@ human {
 .form-group-human {
   color: blue;
   font-family: Avenir, Heveltica, Arial, san-serif;
-  margin-left: 90%;
+  margin-left: 70%;
 }
 
 .form-group-satoshi {
